css/AUstyle.css
* {
    box-sizing: border-box;
}

[class*="col-"] {
    float: left;
}

.col-1  {width: 8.33%;}
.col-2  {width: 16.66%;}
.col-3  {width: 25%;}
.col-4  {width: 33.33%;}
.col-5  {width: 41.66%;}
.col-6  {width: 50%;}
.col-7  {width: 58.33%;}
.col-8  {width: 66.66%;}
.col-9  {width: 75%;}
.col-10 {width: 83.33%;}
.col-11 {width: 91.66%;}
.col-12 {width: 100%;}

footer {
	padding: 15px;
}

.row::after {
    content: "";
    clear: both;
    display: block;
}

.foot-list {
	list-style-type:none;
	margin: 0px;
    overflow: hidden;
}

.foot-list>li {
	float:left;
}

.foot-list>li a {
    display: block;
    text-align: center;
	padding: 0px 15px;
    text-decoration: none;
}

.foot-nav {
	padding-top:5px;
	list-style-type:none;
	margin: 0;
    overflow: hidden;
}

.foot-nav>li {
	float:left;
}

.foot-nav>li a {
    color: #777;
    display: block;
    text-align: center;
	padding: 0px 15px;
    text-decoration: none;
}

.foot-nav>li a:hover {
   color:black;
}


.copyR {
    padding-right: 75px;
	text-align: right;
   	margin-top:40px;
}

/* christian testar */
/* test 2*/

